--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<meta name="description" content="A coding challenge for a sonicbids interview.">
+		<meta name="description" content="A simple webapp that allows you to see when the ISS will be overhead at specific locations.">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<title>ISS Notifier</title>
 		
